--- a/pyber_Complete Dan Boulden.ipynb
+++ b/pyber_Complete Dan Boulden.ipynb
@@ -571,7 +571,7 @@
     "\n",
     "\n",
     "# create and size the ledgend\n",
-    "lgnd= plt.legend([\"Urban\", \"Suburban\", \"Rual\"], loc=1, markerscale = .5, title=\"City Types\")\n",
+    "lgnd= plt.legend([\"Urban\", \"Suburban\", \"Rural\"], loc=1, markerscale = .5, title=\"City Types\")\n",
     "# this part makes all the dots in teh legond the same size\n",
     "lgnd.legendHandles[0]._sizes = [30]\n",
     "lgnd.legendHandles[1]._sizes = [30]\n",
